# polymarket-lp-reward-scanner

./: .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json
.claude/: settings.json
.github/workflows/: check-prod-snapshot-freshness.yml  publish-snapshot.yml
app/: globals.css  layout.tsx  page.tsx
app/api/dashboard/: route.ts
app/api/opportunity-detail/: route.ts
app/api/scanner/: route.ts
components/: live-dashboard.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  separator.tsx  skeleton.tsx  tabs.tsx  tooltip.tsx
docs/: ai-handoff.md  vercel-snapshot.md
docs/qa/: pass-2026-04-30-regression.md  pass-5-regression-2026-04-29.md
fixtures/: mock-snapshot.json
lib/: live-availability.ts  opportunity-detail.ts  orderbook-utils.ts  snapshot.ts
scripts/: check-prod-snapshot-freshness.mjs  publish-snapshot.mjs
src/: client.rs  config.rs  display.rs  filters.rs  lib.rs  main.rs  models.rs  scoring.rs  snapshot.rs
