[package]
name = "polymarket-lp-reward-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "=1.6.3", default-features = false }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
futures = "0.3"
polymarket-client-sdk = { version = "0.4.4", features = ["clob", "gamma"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
